# android_common_driver_modules_npu_driver

./: BUILD.bazel  Makefile  VERSION
hal/kernel/: gc_hal_kernel.c  gc_hal_kernel_command.c  gc_hal_kernel_event.c
hal/kernel/arch/: gc_hal_kernel_context.c  gc_hal_kernel_hardware.c  gc_hal_kernel_hardware_func.c  gc_hal_kernel_hardware_func_flop_reset.c  gc_hal_kernel_recorder.c
hal/os/linux/kernel/: gc_hal_kernel_device.c  gc_hal_kernel_driver.c  gc_hal_kernel_linux.c  gc_hal_kernel_math.c  gc_hal_kernel_os.c
hal/os/linux/kernel/allocator/default/: gc_hal_kernel_allocator_user_memory.c
hal/os/linux/kernel/platform/amlogic/: gc_hal_kernel_platform_amlogic_p.c
hal/security_v1/: gc_hal_ta_mmu.c
